package com.polarstar.gofpattern.creational.factorymethod;

/**
 * Created by zhangxuegang on 2016/5/10.
 */
interface Factory {
    public Product factoryMethod();
}
