package com.polarstar.gofpattern.creational.factorymethod;

/**
 * Created by zhangxuegang on 2016/5/10.
 */
public class Product {
}
